Opened 10 years ago

Closed 7 years ago

#5937 closed defect (fixed)

Flac decoding - sample/frame number mismatch in adjacent frames

Reported by: q3cpma Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: flac regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
sample/frame number mismatch in adjacent frames
This apparently recurring error is still appearing with latest master, so I thought I'd make a report. There's no discernable problem in the sound itself, but this error appears randomly when decoding flac files.
Note that flac -t (flac 1.3.1) doesn't have anything to say about the problematic files.
How to reproduce:

~/ffmpeg-git-20161110-64bit-static/ffmpeg -threads 1 -i "11 - Suite en Gm, FK nv24 - Bourrée, Trio I & II.flac" -c:a pcm_s16le -f null -
ffmpeg version N-82314-g863ebe6-static http://johnvansickle.com/ffmpeg/  Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 5.4.1 (Debian 5.4.1-3) 20161019
  configuration: --enable-gpl --enable-version3 --enable-static --disable-debug --disable-ffplay --disable-indev=sndio --disable-outdev=sndio --cc=gcc-5 --enable-fontconfig --enable-frei0r --enable-gnutls --enable-gray --enable-libass --enable-libebur128 --enable-libfreetype --enable-libfribidi --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libvidstab --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxvid --enable-libzimg
  libavutil      55. 36.100 / 55. 36.100
  libavcodec     57. 66.101 / 57. 66.101
  libavformat    57. 57.100 / 57. 57.100
  libavdevice    57.  2.100 / 57.  2.100
  libavfilter     6. 66.100 /  6. 66.100
  libswscale      4.  3.100 /  4.  3.100
  libswresample   2.  4.100 /  2.  4.100
  libpostproc    54.  2.100 / 54.  2.100
Input #0, flac, from '11 - Suite en Gm, FK nv24 - Bourrée, Trio I & II.flac':
  Metadata:
    ALBUM           : Divers
    REPLAYGAIN_ALBUM_GAIN: -2.28 dB
    ARTIST          : W.F. Bach
    TITLE           : Suite en Gm, FK nv24 - Bourrée, Trio I & II
    REPLAYGAIN_TRACK_PEAK: 0.7671
    REPLAYGAIN_TRACK_GAIN: -2.24 dB
    REPLAYGAIN_ALBUM_PEAK: 1.0000
    track           : 11
    TRACKTOTAL      : 22
  Duration: 00:05:41.40, start: 0.000000, bitrate: 889 kb/s
    Stream #0:0: Audio: flac, 44100 Hz, stereo, s16
    Side data:
      replaygain: track gain - -2.240000, track peak - 0.000018, album gain - -2.280000, album peak - 0.000023,
Output #0, null, to 'pipe:':
  Metadata:
    ALBUM           : Divers
    REPLAYGAIN_ALBUM_GAIN: -2.28 dB
    ARTIST          : W.F. Bach
    TITLE           : Suite en Gm, FK nv24 - Bourrée, Trio I & II
    REPLAYGAIN_TRACK_PEAK: 0.7671
    REPLAYGAIN_TRACK_GAIN: -2.24 dB
    REPLAYGAIN_ALBUM_PEAK: 1.0000
    track           : 11
    TRACKTOTAL      : 22
    encoder         : Lavf57.57.100
    Stream #0:0: Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s
    Metadata:
      encoder         : Lavc57.66.101 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (flac (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
[NULL @ 0x57cb700] sample/frame number mismatch in adjacent frames
size=N/A time=00:05:41.40 bitrate=N/A speed= 585x
video:0kB audio:58811kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown

Change History (10)

comment:1 by Carl Eugen Hoyos, 10 years ago

Please provide a sample.

comment:2 by q3cpma, 10 years ago

Sorry, I don't have a smaller one at the moment. here
If I remember well, the warning appears at 260-270s (using ffplay, without any skipping).

comment:3 by Carl Eugen Hoyos, 10 years ago

Priority: normalminor
Reproduced by developer: set
Status: newopen

Not reproducible after remuxing the file with FFmpeg.

comment:4 by ed, 8 years ago

reproducable with current git master, 4.0.2 and 3.4.4:
the following wav file will be truncated when converting to flac and back using the FFmpeg cli program. The produced flac-file is decoded correctly by certain other decoders but not FFmpeg-cli

wav, testcase and full console output:
https://ocv.me/stuff/bugs/ffmpeg/ffmpeg-bug-2019-0113-invalid-flac-output.tar.xz

comment:5 by Elon Musk, 8 years ago

Priority: minorimportant

comment:6 by mkver, 7 years ago

A further sample is filter/hdcd-mix.flac from the FATE-suite.

comment:7 by Carl Eugen Hoyos, 7 years ago

Priority: importantminor

comment:8 by mkver, 7 years ago

Priority: minornormal

comment:9 by Carl Eugen Hoyos, 7 years ago

Priority: normalminor

This ticket is about a (apparently bogus) warning that is reproducible since a very long time and does not affect decoding, I will open a new ticket for the regression that was carefully hidden here.

$ ffmpeg08 -i fcvora.flac -f crc -
ffmpeg version N-30935-g86824c1, Copyright (c) 2000-2011 the FFmpeg developers
  built on Nov 22 2012 09:31:08 with gcc 4.7.1 20120723 [gcc-4_7-branch revision 189773]
  configuration: --enable-gpl
  libavutil    51.  9. 1 / 51.  9. 1
  libavcodec   53.  7. 0 / 53.  7. 0
  libavformat  53.  4. 0 / 53.  4. 0
  libavdevice  53.  1. 1 / 53.  1. 1
  libavfilter   2. 23. 0 /  2. 23. 0
  libswscale    2.  0. 0 /  2.  0. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[flac @ 0x23628c0] max_analyze_duration 5000000 reached at 5015510
Input #0, flac, from 'fcvora.flac':
  Metadata:
    ALBUM           : Divers
    REPLAYGAIN_ALBUM_GAIN: -2.28 dB
    ARTIST          : W.F. Bach
    TITLE           : Suite en Gm, FK nv24 - Bourrée, Trio I & II
    REPLAYGAIN_TRACK_PEAK: 0.7671
    REPLAYGAIN_TRACK_GAIN: -2.24 dB
    REPLAYGAIN_ALBUM_PEAK: 1.0000
    track           : 11
    TRACKTOTAL      : 22
  Duration: 00:05:41.40, bitrate: 889 kb/s
    Stream #0.0: Audio: flac, 44100 Hz, stereo, s16
Output #0, crc, to 'pipe:':
  Metadata:
    ALBUM           : Divers
    REPLAYGAIN_ALBUM_GAIN: -2.28 dB
    ARTIST          : W.F. Bach
    TITLE           : Suite en Gm, FK nv24 - Bourrée, Trio I & II
    REPLAYGAIN_TRACK_PEAK: 0.7671
    REPLAYGAIN_TRACK_GAIN: -2.24 dB
    REPLAYGAIN_ALBUM_PEAK: 1.0000
    track           : 11
    TRACKTOTAL      : 22
    encoder         : Lavf53.4.0
    Stream #0.0: Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s
Stream mapping:
  Stream #0.0 -> #0.0
Press [q] to stop, [?] for help
[flac @ 0x2364880] sample/frame number mismatch in adjacent frames
CRC=0x9edb1c42
size=       0kB time=00:05:41.40 bitrate=   0.0kbits/s    
video:0kB audio:58811kB global headers:0kB muxing overhead -99.999975%

comment:10 by Carl Eugen Hoyos, 7 years ago

Keywords: regression added
Priority: minorimportant
Resolution: fixed
Status: openclosed

Fixed by Andreas Rheinhardt in e5e5be4c7f607d3c04396d71f511c6b81a1cd997

Note: See TracTickets for help on using tickets.